overflow-x correct

--- a/projects/project_astrozone/css/responsive.css
+++ b/projects/project_astrozone/css/responsive.css
@@ -131,7 +131,7 @@
 
 @media (max-width: 581px) {
 	body {
-		overflow-y: hidden;
+		overflow-x: hidden;
 	}
 	.header-container {
 		justify-content: center;
